Migrate to a more friendly gradle structure